# Linux-note

./: BIOS.txt  README.md  TODO  base_concept.txt  common_trouble  index.html.1  knowhow.txt  resource.txt  tool_knowhow.txt
AI/: knowhow.txt
CPU/: affinity  knowhow.txt  note.txt  schedule  vulnerabilities
CPU/irq/: get_interrupts.sh
IO/: kernel_fs  knowhow.txt  summary.txt
IO/blktrace_test/: step.txt
IO/tool/: getio.sh  (+1 more)
I_pcp/: knowhow.txt
I_test/: .pass_p.c.swp  README.txt  array.c  pass_p.c  test  test.c  test1
I_tool/: db2xls_tmpxls.txt  db2xls_tmpxls_new.txt  get_common.sh  get_hardware.sh  kh_calltree.txt  knowhow.txt  kvm_time_trace.sh  pcm.txt  profile_col.sh
RHEL/: Knowhow.txt  base.txt  memory.txt  network.txt  pgsql.txt  rpmbuild
SLES/: note.txt
develop/: gcc.txt  linux_c.txt
develop/csample/config/: Makefile  Makefile.am  Makefile.in  READEME  config.h  config.h.in  config.status  configure  configure.ac  kvm  kvm_trace.c
develop/csample/config/.deps/: kvm_trace.Po
develop/csample/config/autom4te.cache/: output.0  traces.0  traces.1
gitmanager/: gitnopsd.txt
k8s/: check-new.sh  deployment.yaml  dev.note  install.txt  note.txt  restart.sh
kernel/: QA.txt  btrfs.txt  common.txt  knowhow.txt  ltpnote  memory.txt  parameter.txt  proc.txt  schedule.txt
kvm/: knowhow.txt  summary.txt
memory/: hugepage.txt  knowhow.txt  numa.txt  summary.txt  threshhold.txt
network/: knowhow.txt  nfs.txt  passthrough.txt  sr-iov.txt  tuning.txt
performance/: summary.txt
power/: knowhow.txt
virtual/: knowhow
windows/: knowhow.txt
(+258 files in other folders)
